@@ -321,6 +321,7 @@ LUA
 • |vim.list.unique()| and |Iter:unique()| to deduplicate lists and iterators,
   respectively.
 • |vim.list.bisect()| for binary search.
+• |vim.list.filter()| to filter lists.
 • Experimental `vim.pos` and `vim.range` for Position/Range abstraction.
 • |vim.json.encode()| has an `indent` option for pretty-formatting.
 • |vim.json.encode()| has an `sort_keys` option.
